@@ -1,5 +1,3 @@
 - Open files > 2G.
 
-- Check why automatic resizing doesn't work on the Mac.
-
 - Add material about ne on the Wikipedia text-editor comparison page. In particular, the claim that it doesn't run on Windows is wrong.
